src/sphinx_book_theme/assets/styles/components/_logo.scss
.navbar-brand {
  height: unset;
  max-height: unset;

  // Auto-center the image and title and make items vertical
  flex-direction: column;
  justify-content: center;
  gap: 0.25rem;

  // To prevent site text from having underlines
  &:hover {
    text-decoration: none;
  }
  .logo__title {
    font-size: 1.25rem;
    white-space: normal;
    text-align: center;
  }
}

